# FinancialScrapper

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  sample.csv
app/: config.py  main.py
app/api/: endpoints.py  schemas.py
app/db/: __init__.py  models.py
app/services/: budget_manager.py  discovery.py  reporting.py  scraping.py
app/utils/: extraction.py  normalization.py
app/workers/: agent.py  tasks.py
migrations/: env.py
migrations/versions/: 32091dc7a67f_update_models.py  692e57c61fa1_update_usage_model.py  761afc8bef59_create_tables.py  f8b8118d9bd4_change_constrains_for_aumsnapshot.py
tests/: conftest.py  test_api_endpoints.py  test_business_logic.py  test_db_session_manager.py  test_services.py
